--- a/css/renders.css
+++ b/css/renders.css
@@ -211,8 +211,10 @@
     padding: 0 1.5rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 320px;
-    gap: 1rem;
+    grid-auto-rows: 300px;
+    grid-auto-flow: dense;
+    /* Rellena huecos automaticamente */
+    gap: 0.75rem;
 }
 
 /* Variants */
